--- a/_posts/2020-06-15-3-Sum.markdown
+++ b/_posts/2020-06-15-3-Sum.markdown
@@ -30,23 +30,25 @@ A solution set is:
 
 <h3>Solution:</h3>
 <p style="color: #ffc0cb">Note: This approach reduces the question to two-sum II after ordering the array. Avoid duplicate by skipping elements that are the same as their previous ones. </p>
-<pre><code class="java">public List<List<Integer>> threeSum(int[] nums) {
-    Arrays.sort(nums);
-    List<List<Integer>> res = new ArrayList<>();
-    for (int i = 0; i < nums.length && nums[i] <= 0; ++i)
-        if (i == 0 || nums[i - 1] != nums[i])
-            twoSumII(nums, i, res);
-    return res;
-}
-void twoSumII(int[] nums, int i, List<List<Integer>> res) {
-    int lo = i + 1, hi = nums.length - 1;
-    while (lo < hi) {
-        int sum = nums[i] + nums[lo] + nums[hi];
-        if (sum < 0 || (lo > i + 1 && nums[lo] == nums[lo - 1]))
-            ++lo;
-        else if (sum > 0 || (hi < nums.length - 1 && nums[hi] == nums[hi + 1]))
-            --hi;
-        else
-            res.add(Arrays.asList(nums[i], nums[lo++], nums[hi--]));
+<pre><code class="java">class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        Arrays.sort(nums);
+        List<List<Integer>> res = new ArrayList<>();
+        for (int i = 0; i < nums.length && nums[i] <= 0; ++i)
+            if (i == 0 || nums[i - 1] != nums[i])
+                twoSumII(nums, i, res);
+        return res;
+    }
+    void twoSumII(int[] nums, int i, List<List<Integer>> res) {
+        int lo = i + 1, hi = nums.length - 1;
+        while (lo < hi) {
+            int sum = nums[i] + nums[lo] + nums[hi];
+            if (sum < 0 || (lo > i + 1 && nums[lo] == nums[lo - 1]))
+                ++lo;
+            else if (sum > 0 || (hi < nums.length - 1 && nums[hi] == nums[hi + 1]))
+                --hi;
+            else
+                res.add(Arrays.asList(nums[i], nums[lo++], nums[hi--]));
+        }
     }
 }</code></pre>
