--- a/_posts/2020-06-15-3-Sum.markdown
+++ b/_posts/2020-06-15-3-Sum.markdown
@@ -29,7 +29,7 @@ A solution set is:
 
 
 <h3>Solution:</h3>
-<p style="color: #ffc0cb">Note: This approach reduces the question to two-sum II after ordering the array. Avoid duplicate by skipping elements that are the same as their previous ones. </p>
+<p style="color: #ffc0cb">Note: This approach reduces the question to two-sum II after ordering the array. Avoid duplicate by skipping elements that are the same as their previous ones. And use two pointers to traverse</p>
 <pre><code class="java">class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
         Arrays.sort(nums);
@@ -50,5 +50,28 @@ A solution set is:
             else
                 res.add(Arrays.asList(nums[i], nums[lo++], nums[hi--]));
         }
+    }
+}</code></pre>
+
+
+<p style="color: #ffc0cb">Note: This approach is very alike to 2sum, but it uses set and specific arrangement for triplets to avoid duplicates.</p>
+<pre><code class="java">class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        List<List<Integer>> res = new ArrayList<>();
+        Set<Pair> found = new HashSet<>();
+        for (int i = 0; i < nums.length; ++i) {
+            Set<Integer> seen = new HashSet<>();
+            for (int j = i + 1; j < nums.length; ++j) {
+                int complement = -nums[i] - nums[j];
+                if (seen.contains(complement)) {
+                    int v1 = Math.min(nums[i], Math.min(complement, nums[j]));
+                    int v2 = Math.max(nums[i], Math.max(complement, nums[j]));
+                    if (found.add(new Pair(v1, v2)))
+                        res.add(Arrays.asList(nums[i], complement, nums[j]));
+                }
+                seen.add(nums[j]);
+            }
+        }
+        return res;
     }
 }</code></pre>
